# besfa

./: .gitignore  AGENTS.md  Cargo.toml  DOCUMENT.md  LICENSE  README.md  Scene.besfa.json
besfa_editor/: README.md  pubspec.yaml
besfa_editor/lib/: main.dart
besfa_editor/lib/app/: besfa_app.dart
besfa_editor/lib/pages/editor/: editor_page.dart
besfa_editor/lib/shared/ui/: panel_title.dart
besfa_editor/lib/widgets/editor_shell/: editor_top_bar.dart  editor_viewport.dart  inspector_panel.dart  (+2 more)
besfa_editor/test/: editor_viewport_test.dart  inspector_panel_test.dart  runtime_ipc_client_test.dart  runtime_log_panel_test.dart  runtime_preview_controller_test.dart  widget_test.dart
besfa_editor/test/helpers/: runtime_preview_fakes.dart
besfa_editor/windows/: CMakeLists.txt
besfa_editor/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
besfa_editor/windows/runner/: Runner.rc  main.cpp
besfa_flutter_plugin/: README.md  pubspec.yaml
besfa_flutter_plugin/example/: README.md  pubspec.yaml
besfa_flutter_plugin/example/integration_test/: plugin_integration_test.dart
besfa_flutter_plugin/example/lib/: main.dart
besfa_flutter_plugin/example/test/: widget_test.dart
besfa_flutter_plugin/example/windows/: CMakeLists.txt
besfa_flutter_plugin/hook/: build.dart
besfa_flutter_plugin/lib/: besfa_flutter_plugin.dart  besfa_flutter_plugin_method_channel.dart  besfa_flutter_plugin_platform_interface.dart
besfa_flutter_plugin/lib/src/: native_api.dart  preview_surface_descriptor.dart
besfa_flutter_plugin/rust/: Cargo.toml  README.md  rust-toolchain.toml
besfa_flutter_plugin/rust/src/: lib.rs
besfa_flutter_plugin/test/: besfa_flutter_plugin_method_channel_test.dart  besfa_flutter_plugin_test.dart
besfa_flutter_plugin/windows/: CMakeLists.txt  besfa_flutter_plugin.cpp  besfa_flutter_plugin.h  besfa_flutter_plugin_c_api.cpp  preview_texture.cpp  preview_texture.h
besfa_flutter_plugin/windows/test/: besfa_flutter_plugin_test.cpp
crates/besfa_bevy/: Cargo.toml  README.md
crates/besfa_bevy/src/: external_preview.rs  lib.rs  preview.rs  runtime_ipc.rs  scene_file.rs
crates/besfa_bevy/src/runtime_ipc/: resources.rs  snapshot.rs  systems.rs  transport.rs
crates/besfa_core/: Cargo.toml  README.md
crates/besfa_core/src/: lib.rs
crates/besfa_ipc/: Cargo.toml  README.md
crates/besfa_ipc/src/: codec.rs  command.rs  config.rs  error.rs  lib.rs  message.rs  payload.rs
crates/besfa_runtime/: Cargo.toml  README.md
crates/besfa_runtime/src/: main.rs
(+7 files in other folders)
