[package]
name = "besfa_flutter_plugin_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
besfa_core = { path = "../../crates/besfa_core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
