[package]
name = "besfa_bevy"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
besfa_core = { workspace = true }
besfa_ipc = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }

[features]
default = []
runtime = ["dep:bevy", "dep:besfa_ipc", "bevy/3d"]
